# 42sh

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  TODO  TOTO  add.sh  doxygen_config  file22  test1.sh  test2.sh  toto
doc/: 42sh.1  42sh.1.html  42sh.md  doxygen_config
src/: 42sh.c  42sh.h  CMakeLists.txt  begin_file  begin_file_h  create_source_file.sh
src/arithmetic_expression/: lexer.c  lexer.h  main.c  parser.c  parser.h  tree.c  tree.h
src/builtins/: Makefile  break.c  break.h  cat  cd.c  cd.h  echo  echo.c  echo.h  exit.c  exit.h  export.c  export.h  history.c  history.h  main_source.c  shopt.c  shopt.h  source.c  source.h
src/builtins/alias/: alias.c  alias.h  unalias.c  unalias.h
src/command_expansion/: command_expansion.c  command_expansion.h
src/command_substitution/: command_substitution.c  command_substitution.h
src/commands/: echo.c  echo.h
src/data_structures/: array_list.c  array_list.h  data_string.c  data_string.h  hash_map.c  hash_map.h  queue.c  queue.h  stack.c  stack.h
src/error/: error.c  error.h
src/execution_handling/: .#command_container.h  command_container.c  command_container.h  command_execution.c  command_execution.h  command_storage.c  command_storage.h  redirector.c  redirector.h
src/input_ouput/: read.c  read.h  write.c
src/input_output/: get_next_line.c  get_next_line.h  prompt.c  prompt.h  read.c  read.h  write.c  write.h
src/job_control/: jobs.h
src/lexer/: token_lexer.c  token_lexer.h
src/memory/: memory.c  memory.h
src/parameters_handling/: options.h  parameters_handler.c  parameters_handler.h
src/parser/: ast_build.c  ast_build.h  parser.c  parser.h  parser_utils.c  parser_utils.h
src/parser/ast/: ast.c  ast.h  ast_print.c  ast_print.h  destroy_tree.c  destroy_tree.h
src/path_expention/: path_exepension.c  path_exepension.h
src/pipe_handling/: pipe.c  pipe.h
src/redirection_handling/: redirect.c  redirect.h
src/redirections_handling/: redirect.c  redirect.h  redirect_left.c  redirect_left.h
src/special_variables/: expand_special_variables.c  expand_special_variables.h
src/variables/: expand_special_variables.c
tests/: 42sh_tests.py  CMakeLists.txt  mini.c  test_42sh.c
tests/arithmetic_expression/: test_arithmetic_expression.c
tests/builtins/: test_redirector.c  test_shopt.c
tests/commands_handling/: test_create.c  test_exec.c  test_store.c
tests/data_structures/: test_hash_map.c  test_queue.c  test_stack.c  test_string.c
tests/input_output/: a.out  test_read.c  test_write.c
tests/lexer/: test_token_lexer.c
tests/parameters_handling/: test_parameters_handler.c
tests/parser/redirections/: tests.yml
tests/parser_execution_if/: test1.sh  tests.yml
tests/tests_py/: tests.yml
tests/tests_py_template/: tests.yml
tests/week1_if/: test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  test9.sh  tests.yml
tests/week1_if_error/: test1.sh  test10.sh  test11.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  tests.yml
tests/week1_redirections/: tests.yml
tests/week1_simplecommand/: test.yml  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  tests.yml
tests/week1_simplecommand_error/: test.yml  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  tests.yml
tests/week2_case/: test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  tests.yml
tests/week2_case_clause/: tests.yml
tests/week2_case_error/: test1.sh  tests.yml
tests/week2_for/: script  tests.yml
tests/week2_for_error/: tests.yml
tests/week2_functions/: test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  tests.yml
tests/week2_functions_error/: test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  tests.yml
tests/week2_redirections/: test1.sh  test10.sh  test11.sh  test12.sh  test13.sh  test14.sh  test15.sh  test16.sh  test17.sh  test18.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  test9.sh  tests.yml
tests/week2_redirections_error/: test1.sh  test2.sh  test3.sh  tests.yml
tests/week2_shopt/: tests.yml  tests.yml~
tests/week2_until/: test1.sh  test2.sh  test3.sh  test4.sh  tests.yml
tests/week2_while/: test1.sh  test2.sh  test3.sh  tests.yml
tests/week3_break_continue/: tests.yml
tests/week3_cd/: tests.yml
tests/week3_echo/: tests.yml
tests/week3_exit/: test1.sh  test2.sh  tests.yml
tests/week3_expansion/: test1.sh  tests.yml
tests/week3_export/: tests.yml
tests/week3_path_expansion/: tests.yml
tests/week3_path_ext/: tests.yml
tests/week3_quotes/: test1.sh  test2.sh  tests.yml
tests/week3_substitution/: test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  tests.yml
tests/week3_tilde/: tests.yml
tests/week3_variables/: test1.sh  test2.sh  test3.sh  tests.yml
tests/week4_IFS/: test1  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  tests.yml
tests/week4_alias/: tests.yml
tests/week4_arithmetic/: tests.yml
tests/week_2_functions/: test1.sh
